--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="wrapper">
+        <a id="btnNewGame">New Game</a>
+
         <div class="gridContainer">
             <div class="emptyGrid">
                 <div class="row">
@@ -37,31 +38,42 @@
             </div>
             <div class="filledGrid">
                 <div class="row">
-                    <div class="gridCell useful">1</div>
-                    <div class="gridCell useful">2</div>
-                    <div class="gridCell useful">3</div>
-                    <div class="gridCell useful">4</div>
+                    <!--
+                    <div class="gridCell useful"><span>1</span></div>
+                    <div class="gridCell useful"><span>2</span></div>
+                    <div class="gridCell useful"><span>3</span></div>
+                    <div class="gridCell useful"><span>4</span></div>
+                    -->
                 </div>
                 <div class="row">
-                    <div class="gridCell useful">5</div>
-                    <div class="gridCell useful">6</div>
-                    <div class="gridCell useful">7</div>
-                    <div class="gridCell useful">8</div>
+                    <!--
+                    <div class="gridCell useful"><span>5</span></div>
+                    <div class="gridCell useful"><span>6</span></div>
+                    <div class="gridCell useful"><span>7</span></div>
+                    <div class="gridCell useful"><span>8</span></div>
+                    -->
                 </div>
                 <div class="row">
-                    <div class="gridCell useful">9</div>
-                    <div class="gridCell useful">10</div>
-                    <div class="gridCell useful">11</div>
-                    <div class="gridCell useful">12</div>
+                    <!--
+                    <div class="gridCell useful"><span>9</span></div>
+                    <div class="gridCell useful"><span>10</span></div>
+                    <div class="gridCell useful"><span>11</span></div>
+                    <div class="gridCell useful"><span>12</span></div>
+                    -->
                 </div>
                 <div class="row">
-                    <div class="gridCell useful">13</div>
-                    <div class="gridCell useful">14</div>
-                    <div class="gridCell useful">15</div>
+                    <!--
+                    <div class="gridCell useful"><span>13</span></div>
+                    <div class="gridCell useful"><span>14</span></div>
+                    <div class="gridCell useful"><span>15</span></div>
+                    <div class="gridCell useful empty final"></div>
+                    -->
                 </div>
             </div>
         </div>
     </div>
+    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.js"></script>-->
+    <script src="js/jquery-1.11.0.js"></script>
     <script src="js/main_js.js"></script>
 </body>
 </html>
